--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /practice_code/practice_code/x64/Debug
 /practice_code/practice_code/Debug
 *.user
+/practice_code/CPP_Template_Complete_Guide/Debug
