Pushing all changes

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /practice_code/practice_code/Debug
 *.user
 /practice_code/CPP_Template_Complete_Guide/Debug
+/practice_code/CPP_Template_2ndTime/Debug
