--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,18 @@
 *.user
 /practice_code/CPP_Template_Complete_Guide/Debug
 /practice_code/CPP_Template_2ndTime/Debug
+/practice_code/.vs
+/practice_code/Leet_Code_Test/CMakeFiles
+/practice_code/Leet_Code_Test/Debug
+/practice_code/Leet_Code_Test/_deps
+/practice_code/Leet_Code_Test/CMakeCache.txt
+/practice_code/Leet_Code_Test/packages.config
+/practice_code/Leet_Code_Test/Makefile
+/practice_code/Leet_Code_Test/leetcodetest
+/practice_code/Leet_Code_Test/cmake_install.cmake
+/practice_code/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1.7
+/practice_code/Cariad_interview
+/practice_code/Leet_Code/Debug
+/practice_code/Practice_code_test/pch.h
+/practice_code/Practice_code_test/pch.cpp
+/practice_code/Practice_code_test/packages.config
